--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,6 +6,9 @@
             android:id="@+id/nav_events"
             android:icon="@drawable/events"
             android:title="Events" />
+        <item android:id="@+id/nav_workshops"
+            android:icon="@drawable/workshops"
+            android:title="Workshops"/>
         <item
             android:id="@+id/nav_location"
             android:icon="@drawable/location"
@@ -13,6 +16,9 @@
         <item android:id="@+id/nav_notification"
             android:icon="@drawable/notifications"
             android:title="Notifications"/>
+        <item android:id="@+id/na_sponsors"
+            android:icon="@drawable/sponsors"
+            android:title="Sponsors"/>
         <item android:id="@+id/nav_settings"
             android:icon="@drawable/settings"
             android:title="Settings"/>
