--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,9 @@
         <item android:id="@+id/nav_workshops"
             android:icon="@drawable/workshops"
             android:title="Workshops"/>
+        <item android:id="@+id/nav_keynotes"
+            android:icon="@drawable/keynotes"
+            android:title="KeyNotes"/>
         <item
             android:id="@+id/nav_location"
             android:icon="@drawable/location"
@@ -16,7 +19,7 @@
         <item android:id="@+id/nav_notification"
             android:icon="@drawable/notifications"
             android:title="Notifications"/>
-        <item android:id="@+id/na_sponsors"
+        <item android:id="@+id/nav_sponsors"
             android:icon="@drawable/sponsors"
             android:title="Sponsors"/>
         <item android:id="@+id/nav_settings"
