--- a/app/src/main/res/layout/category_single_item.xml
+++ b/app/src/main/res/layout/category_single_item.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="#3f51b5"
+        android:id="@+id/llCategoryCard"
         >
     <ImageView
         android:layout_width="wrap_content"
