--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,44 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="red500">#F44336</color>
+    <color name="green500">#4CAF50</color>
+    <color name="blue500">#03A9F4</color>
+    <color name="yellow500">#FFC107</color>
+    <color name="brown500">#795548</color>
+    <color name="pink500">#E91E63</color>
+    <color name="purple500">#9C27B0</color>
+    <color name="deeppurple500">#673AB7</color>
+    <color name="indigo500">#3F51B5</color>
+    <color name="cyan500">#00BCD4</color>
+    <color name="teal500">#009688</color>
+    <color name="orange500">#FF5722</color>
+
+    <color name="red400">#EF5350</color>
+    <color name="green400">#66BB6A</color>
+    <color name="blue400">#42A5F5</color>
+    <color name="yellow400">#FFEE58</color>
+    <color name="brown400">#8D6E63</color>
+    <color name="pink400">#EC407A</color>
+    <color name="purple400">#AB47BC</color>
+    <color name="deeppurple400">#7E57C2</color>
+    <color name="indigo400">#5C6BC0</color>
+    <color name="cyan400">#26C6DA</color>
+    <color name="teal400">#26A69A</color>
+    <color name="orange400">#FF7043</color>
+
+    <color name="red300">#E57373</color>
+    <color name="green300">#81C784</color>
+    <color name="blue300">#64B5F6</color>
+    <color name="yellow300">#FFF176</color>
+    <color name="brown300">#A1887F</color>
+    <color name="pink300">#F06292</color>
+    <color name="purple300">#BA68C8</color>
+    <color name="deeppurple300">#9575CD</color>
+    <color name="indigo300">#7986CB</color>
+    <color name="cyan300">#4DD0E1</color>
+    <color name="teal">#4DB6AC</color>
+    <color name="orange">#FF8A65</color>
+
 </resources>
