--- a/app/src/main/res/layout/category_single_item.xml
+++ b/app/src/main/res/layout/category_single_item.xml
@@ -1,43 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    android:id="@+id/cvCategory"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="15dp"
-    app:cardCornerRadius="10dp"
-    android:id="@+id/cvCategory">
+    android:orientation="vertical"
+    app:cardCornerRadius="10dp">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="#3f51b5"
         android:id="@+id/llCategoryCard"
-        >
-    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/ivCategory"
-        android:src="@drawable/silicus"
-        android:paddingEnd="15dp"
-        android:paddingStart="15dp"
-        android:contentDescription="Category"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Category"
-        android:id="@+id/tvCategory"
-        android:textColor="#ffff"
-        android:textSize="25sp"
-        android:layout_gravity="center"
-        android:layout_marginBottom="10dp"/>
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/ivCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="Category"
+            android:paddingEnd="15dp"
+            android:paddingStart="15dp"
+            android:src="@drawable/silicus" />
+
+        <TextView
+            android:id="@+id/tvCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:text="Category"
+            android:textColor="#ffff"
+            android:textSize="25sp" />
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvEvents"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/rvEvents"
-            android:visibility="gone"/>
+            android:visibility="gone" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
