--- a/app/src/main/res/layout/fragment_keynotes.xml
+++ b/app/src/main/res/layout/fragment_keynotes.xml
@@ -9,10 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
@@ -20,6 +19,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="KeyNote Lectures"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:textColor="#fff"
                 android:textSize="30sp"
                 />
@@ -28,15 +29,10 @@
                 android:layout_height="wrap_content"
                 android:contentDescription="Down Arrow"
                 android:src="@drawable/down_arrow"
-                android:layout_marginTop="10dp"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
                 />
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="Down Arrow"
-                android:src="@drawable/down_arrow"
-                />
-        </LinearLayout>
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
