--- a/app/src/main/res/layout/event_single_item.xml
+++ b/app/src/main/res/layout/event_single_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:id="@+id/llEventSingleItem"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <ImageView
         android:layout_width="wrap_content"
