--- a/app/src/main/res/layout/fragment_keynotes.xml
+++ b/app/src/main/res/layout/fragment_keynotes.xml
@@ -100,6 +100,7 @@ Main Auditiorium, COEP"
                 android:text="Dr. K Radhakrishnan"
                 android:textSize="20sp"
                 android:gravity="center"
+                android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:textColor="#fff"/>
             <TextView
