--- a/app/src/main/res/layout/fragment_overview_event_details.xml
+++ b/app/src/main/res/layout/fragment_overview_event_details.xml
@@ -45,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="Short Description"
+                android:layout_gravity="center"
                 android:textSize="17sp"
                 android:textColor="#fff"
                 android:id="@+id/tvShortDescription"/>
