--- a/app/src/main/res/layout/fragment_overview_workshop_details.xml
+++ b/app/src/main/res/layout/fragment_overview_workshop_details.xml
@@ -1,6 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <pro.alexzaitsev.freepager.library.view.core.VerticalPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_centerInParent="true">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Workshop Name"
+                    android:textColor="#fff"
+                    android:id="@+id/tvWorkshopName"
+                    android:textSize="25sp"
+                    android:layout_margin="10dp"/>
+                <info.hoang8f.widget.FButton
+                    android:id="@+id/bViewTimeline"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="7dp"
+                    android:text="Register Now"
+                    android:textColor="#fff"
+                    app:buttonColor="@color/colorPrimary"
+                    app:cornerRadius="50dp"
+                    app:shadowColor="@color/colorAccent"
+                    app:shadowEnabled="true"
+                    app:shadowHeight="5dp"
+                    android:padding="10dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:text="Short Description"
+                    android:layout_gravity="center"
+                    android:textSize="17sp"
+                    android:textColor="#fff"
+                    android:id="@+id/tvShortDescription"/>
+            </LinearLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:src="@drawable/down_arrow"
+                android:layout_centerHorizontal="true"
+                android:contentDescription="Down Arrow"/>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Details"
+                android:layout_margin="10dp"
+                android:textSize="25sp"
+                android:textColor="#fff"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Details here"
+                android:id="@+id/tvDetails"
+                android:textSize="17sp"
+                android:layout_margin="10dp"
+                android:textColor="#fff"/>
+        </LinearLayout>
+    </pro.alexzaitsev.freepager.library.view.core.VerticalPager>
 </LinearLayout>
