--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mindspark_background">
+    android:background="#FFFFFF"
+    android:orientation="vertical">
 
     <android.support.design.widget.TabLayout
+        android:id="@+id/tlEventDetails"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tlEventDetails"
+        app:tabIndicatorColor="@color/colorAccent"
         app:tabSelectedTextColor="@color/colorAccent"
-        app:tabTextColor="@android:color/darker_gray"
-        app:tabIndicatorColor="@color/colorAccent"/>
+        app:tabTextColor="@android:color/darker_gray" />
 
     <android.support.v4.view.ViewPager
+        android:id="@+id/vpEventDetails"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/vpEventDetails"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 </LinearLayout>
