--- a/app/src/main/res/layout/category_single_item.xml
+++ b/app/src/main/res/layout/category_single_item.xml
@@ -30,7 +30,7 @@
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
             android:text="Category"
-            android:textColor="#ffff"
+            android:textColor="#101136"
             android:textSize="25sp" />
 
         <android.support.v7.widget.RecyclerView
