--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="aceshub.mindspark.MainActivity"
-    tools:showIn="@layout/app_bar_main"
-    android:background="@drawable/mindspark_background">
+    tools:showIn="@layout/app_bar_main">
 
    <FrameLayout
+       android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:id="@+id/main_container"
-       tools:layout_editor_absoluteY="8dp"
-       tools:layout_editor_absoluteX="8dp" />
+       tools:layout_editor_absoluteX="8dp"
+       tools:layout_editor_absoluteY="8dp" />
 
 </RelativeLayout>
