--- a/app/src/main/res/layout/event_single_item.xml
+++ b/app/src/main/res/layout/event_single_item.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/llEventSingleItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    android:id="@+id/llEventSingleItem"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_margin="5dp">
     <ImageView
+        android:id="@+id/ivEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="Event"
-        android:src="@drawable/events"
-        android:id="@+id/ivEvent"
         android:layout_marginEnd="6dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="6dp"
-        android:layout_marginStart="5dp"/>
+        android:layout_marginStart="5dp"
+        android:contentDescription="Event"
+        android:src="@drawable/events" />
     <TextView
+        android:id="@+id/tvEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Event 1"
-        android:id="@+id/tvEvent"
-        android:textColor="#ffffff"
-        android:textSize="18sp"
         android:layout_margin="5dp"
+        android:text="Event 1"
+        android:textColor="#101136"
+        android:textSize="18sp"
         />
 </LinearLayout>
