--- a/app/src/main/res/layout/fragment_overview_event_details.xml
+++ b/app/src/main/res/layout/fragment_overview_event_details.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <pro.alexzaitsev.freepager.library.view.core.VerticalPager
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
                 android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/ivEventDesc"
+                    android:layout_marginTop="20dp"
+                    android:layout_gravity="center"
+                    />
+
 
                 <TextView
                     android:id="@+id/tvEventName"
@@ -30,23 +29,23 @@
                     android:textColor="#101136"
                     android:textSize="25sp" />
 
-                <info.hoang8f.widget.FButton
-                    android:id="@+id/bViewTimeline"
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="7dp"
-                    android:padding="10dp"
-                    android:text="Register Now"
-                    android:textColor="#fff"
-                    app:buttonColor="@color/colorPrimary"
-                    app:cornerRadius="50dp"
-                    app:shadowColor="@color/colorAccent"
-                    app:shadowEnabled="true"
-                    app:shadowHeight="5dp" />
+                <!--<info.hoang8f.widget.FButton-->
+                    <!--android:id="@+id/bViewTimeline"-->
+                    <!--android:layout_width="150dp"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_gravity="center"-->
+                    <!--android:layout_margin="7dp"-->
+                    <!--android:padding="10dp"-->
+                    <!--android:text="Register Now"-->
+                    <!--android:textColor="#fff"-->
+                    <!--app:buttonColor="@color/colorPrimary"-->
+                    <!--app:cornerRadius="50dp"-->
+                    <!--app:shadowColor="@color/colorAccent"-->
+                    <!--app:shadowEnabled="true"-->
+                    <!--app:shadowHeight="5dp" />-->
 
                 <TextView
-                    android:id="@+id/tvShortDescription"
+                    android:id="@+id/tvObjective"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -54,53 +53,16 @@
                     android:text="Short Description"
                     android:textColor="#101136"
                     android:textSize="17sp" />
-            </LinearLayout>
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:contentDescription="Down Arrow"
-                android:src="@drawable/down_arrow" />
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="Objective"
-                android:textColor="#fff"
-                android:textSize="25sp" />
-
-            <TextView
-                android:id="@+id/tvObjective"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="objective here"
-                android:textColor="#fff"
-                android:textSize="17sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
                 android:text="Structure"
-                android:textColor="#fff"
+                android:layout_gravity="center"
+                android:textColor="#101136"
                 android:textSize="25sp" />
 
             <TextView
@@ -108,33 +70,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="Structure here"
-                android:textColor="#fff"
+                android:layout_gravity="center"
+                android:text="structure here"
+                android:textColor="#101136"
                 android:textSize="17sp" />
-        </LinearLayout>
+                </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical">
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:gravity="center"-->
+            <!--android:orientation="vertical">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="Rules"
-                android:textColor="#fff"
-                android:textSize="25sp" />
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="10dp"-->
+                <!--android:text="Rules"-->
+                <!--android:textSize="25sp" />-->
 
-            <TextView
-                android:id="@+id/tvRules"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="Rules here"
-                android:textColor="#fff"
-                android:textSize="17sp" />
-        </LinearLayout>
-    </pro.alexzaitsev.freepager.library.view.core.VerticalPager>
-</LinearLayout>
+            <!--<TextView-->
+                <!--android:id="@+id/tvRules"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_margin="10dp"-->
+                <!--android:text="Rules here"-->
+                <!--android:textSize="17sp" />-->
+        <!--</LinearLayout>-->
+</ScrollView>
