--- a/app/src/main/res/layout/workshop_single_item.xml
+++ b/app/src/main/res/layout/workshop_single_item.xml
@@ -19,18 +19,18 @@
             android:layout_height="wrap_content"
             android:id="@+id/ivWorkshop"
             android:src="@drawable/autohaul"
-            android:paddingEnd="15dp"
-            android:paddingStart="15dp"
+            android:padding="15dp"
             android:contentDescription="Workshop"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Workshop"
+            android:gravity="center"
             android:id="@+id/tvWorkshop"
-            android:textColor="#ffff"
+            android:textColor="#000"
             android:textSize="23sp"
             android:layout_gravity="center"
-            android:layout_marginBottom="10dp"/>
+            android:layout_margin="20dp"/>
     </LinearLayout>
 </android.support.v7.widget.CardView>
