--- a/app/src/main/res/layout/workshop_single_item.xml
+++ b/app/src/main/res/layout/workshop_single_item.xml
@@ -20,6 +20,7 @@
             android:id="@+id/ivWorkshop"
             android:src="@drawable/autohaul"
             android:padding="15dp"
+            android:layout_gravity="center"
             android:contentDescription="Workshop"
             />
         <TextView
