--- a/app/src/main/res/layout/fragment_overview_workshop_details.xml
+++ b/app/src/main/res/layout/fragment_overview_workshop_details.xml
@@ -13,7 +13,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_margin="10dp"
@@ -76,15 +76,20 @@
                 android:contentDescription="Down Arrow"/>
         </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:gravity="top"
+            android:layout_margin="10dp"
             android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Benefits"
+                android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:textSize="25sp"
                 android:textColor="#101136"/>
@@ -97,16 +102,26 @@
                 android:layout_margin="10dp"
                 android:textColor="#101136"/>
         </LinearLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:src="@drawable/down_arrow_black"
+                android:layout_centerHorizontal="true"
+                android:contentDescription="Down Arrow"/>
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:gravity="top"
+            android:layout_margin="10dp"
             android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Outcomes"
+                android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:textSize="25sp"
                 android:textColor="#101136"/>
