--- a/app/src/main/res/layout/fragment_overview_workshop_details.xml
+++ b/app/src/main/res/layout/fragment_overview_workshop_details.xml
@@ -13,15 +13,17 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:layout_gravity="top"
                 android:layout_margin="10dp"
                 android:layout_centerInParent="true">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
+                    android:gravity="center"
                     android:text="Workshop Name"
                     android:textColor="#101136"
                     android:id="@+id/tvWorkshopName"
